--- a/project_card_swipes/1_read_and write_to_screen_1st_3_records.ipynb
+++ b/project_card_swipes/1_read_and write_to_screen_1st_3_records.ipynb
@@ -35,12 +35,13 @@
     "file = open(file_name, \"r\")\n",
     "\n",
     "lines = file.readlines()  # Reads all lines into a list\n",
+    "file.close()\n",
+    "\n",
     "print(f\"lines: \\n {lines}\")\n",
     "print(f\"type: {type(lines)}\")\n",
     "print(f\"number of lines: {len(lines)}\")\n",
     "print(f\"number of employees: {len(lines)/14}\")\n",
-    "\n",
-    "file.close()"
+    "\n"
    ]
   },
   {
