--- a/project_card_swipes/2_find_all_employees_who_are_terminated.ipynb
+++ b/project_card_swipes/2_find_all_employees_who_are_terminated.ipynb
@@ -91,8 +91,9 @@
     "\n",
     "file_name = \"swipe_schedule.txt\"\n",
     "file = open(file_name, \"r\")\n",
-    "\n",
     "lines = file.readlines()  # Reads all lines into a list\n",
+    "file.close()\n",
+    "\n",
     "number_of_employees = int(len(lines)/14) \n",
     "print(number_of_employees)\n",
     "\n",
@@ -103,8 +104,7 @@
     "        rec_str = rec_str + i\n",
     "        \n",
     "    print(rec_str)\n",
-    "    print(\"++++++++++++++++++++++++++++++++++++++++++++\")\n",
-    "file.close()"
+    "    print(\"++++++++++++++++++++++++++++++++++++++++++++\")\n"
    ]
   },
   {
@@ -152,9 +152,11 @@
    "source": [
     "# STEP2: lets iterate over the whole file and print only those employees who are terminated\n",
     "\n",
+    "file_name = \"swipe_schedule.txt\"\n",
     "file = open(file_name, \"r\")\n",
-    "\n",
     "lines = file.readlines()  # Reads all lines into a list\n",
+    "file.close()\n",
+    "\n",
     "number_of_employees = int(len(lines)/14) \n",
     "\n",
     "for i in range(0, number_of_employees): # i = 0, 1, 2, 3\n",
@@ -168,8 +170,7 @@
     "            \n",
     "        print(rec_str)\n",
     "    \n",
-    "    # print(\"++++++++++++++++++++++++++++++++++++++++++++\")\n",
-    "file.close()"
+    "    # print(\"++++++++++++++++++++++++++++++++++++++++++++\")\n"
    ]
   },
   {
