--- a/project_card_swipes/4_find_employees_who_joined_before_2020.ipynb
+++ b/project_card_swipes/4_find_employees_who_joined_before_2020.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c88a5942-fcff-4739-9ea4-09e107ab5be4",
+   "metadata": {},
+   "source": [
+    "# Part A\n",
+    "Print data of employees who started before year 2020"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "b3107a31-9df7-4e6b-a518-cbe0fdf68ad7",
    "metadata": {},
    "outputs": [
@@ -10,10 +19,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['--------------- record 1---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: harsh \\n', 'middle name: r\\n', 'last name: mehta\\n', 'employee id: c0092\\n', 'date of join: 2020-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:42\\n', '\\n', '\\n', 'group: HR\\n', 'comments: The person is disabled\\n']\n",
+      "['--------------- record 1---------------------------\\n', 'date today:2025-02-17\\n', '\\n', 'first name: harsh \\n', 'middle name: r\\n', 'last name: mehta\\n', 'employee id: c0092\\n', 'date of join:2020-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:42\\n', '\\n', '\\n', 'group: HR\\n', 'comments: The person is disabled\\n']\n",
       "++++++++++++++++++++++++++++++++++++++++++++\n",
       "\n",
-      "['--------------- record 2---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: john\\n', 'middle name: \\n', 'last name: smith\\n', 'employee id: c0093\\n', 'date of join: 2019-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', '\\n', '\\n', 'group: IT\\n', 'comments:\\n']\n",
+      "['--------------- record 2---------------------------\\n', 'date today:    2025-02-17\\n', '\\n', 'first name: john\\n', 'middle name: \\n', 'last name: smith\\n', 'employee id: c0093\\n', 'date of join:     2019-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', '\\n', '\\n', 'group: IT\\n', 'comments:\\n']\n",
       "++++++++++++++++++++++++++++++++++++++++++++\n",
       "\n",
       "['--------------- record 3---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: Vladmir\\n', 'middle name: J\\n', 'last name: Kurshowski\\n', 'employee id: c0094\\n', 'date of join: 2017-07-23\\n', '\\n', 'card swipes: 7:32, 8:43\\n', '\\n', '\\n', 'group: IT\\n', 'comments: Employee is terminated\\n']\n",
@@ -27,12 +36,13 @@
    ],
    "source": [
     "# # STEP1: lets iterate over the whole file and print all the employees\n",
-    "# i = 0, 14, 28, ..\n",
+    "# Each new employee entry starts at i = 0, 14, 28, ..\n",
     "\n",
     "file_name = \"swipe_schedule.txt\"\n",
     "file = open(file_name, \"r\")\n",
-    "\n",
     "lines = file.readlines()  # Reads all lines into a list\n",
+    "file.close()\n",
+    "\n",
     "number_of_employees = int(len(lines)/14) \n",
     "# print(number_of_employees)\n",
     "\n",
@@ -40,12 +50,12 @@
     "    l = lines[i*14: i*14 + 14]  # <- lines[0:14], lines[14:28], lines[28:42], lines[42:56]\n",
     "    print(l)\n",
     "    print(\"++++++++++++++++++++++++++++++++++++++++++++\\n\")\n",
-    "file.close()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "821c5149-d80e-436e-b683-024941f00497",
    "metadata": {},
    "outputs": [
@@ -53,10 +63,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "l= ['--------------- record 1---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: harsh \\n', 'middle name: r\\n', 'last name: mehta\\n', 'employee id: c0092\\n', 'date of join: 2020-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:42\\n', '\\n', '\\n', 'group: HR\\n', 'comments: The person is disabled\\n']\n",
+      "l= ['--------------- record 1---------------------------\\n', 'date today:2025-02-17\\n', '\\n', 'first name: harsh \\n', 'middle name: r\\n', 'last name: mehta\\n', 'employee id: c0092\\n', 'date of join:2020-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:42\\n', '\\n', '\\n', 'group: HR\\n', 'comments: The person is disabled\\n']\n",
       "+++++++++++++++++++++++++++++++++++\n",
       "\n",
-      "l= ['--------------- record 2---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: john\\n', 'middle name: \\n', 'last name: smith\\n', 'employee id: c0093\\n', 'date of join: 2019-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', '\\n', '\\n', 'group: IT\\n', 'comments:\\n']\n",
+      "l= ['--------------- record 2---------------------------\\n', 'date today:    2025-02-17\\n', '\\n', 'first name: john\\n', 'middle name: \\n', 'last name: smith\\n', 'employee id: c0093\\n', 'date of join:     2019-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', '\\n', '\\n', 'group: IT\\n', 'comments:\\n']\n",
       "+++++++++++++++++++++++++++++++++++\n",
       "\n",
       "l= ['--------------- record 3---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: Vladmir\\n', 'middle name: J\\n', 'last name: Kurshowski\\n', 'employee id: c0094\\n', 'date of join: 2017-07-23\\n', '\\n', 'card swipes: 7:32, 8:43\\n', '\\n', '\\n', 'group: IT\\n', 'comments: Employee is terminated\\n']\n",
@@ -67,7 +77,7 @@
       "\n",
       "\n",
       "\n",
-      "records: [{'date_today': '2025-02-17', 'first_name': 'Ashwani', 'middle_name': 'J'}, {'date_today': '2025-02-17', 'first_name': 'Ashwani', 'middle_name': 'J'}, {'date_today': '2025-02-17', 'first_name': 'Ashwani', 'middle_name': 'J'}, {'date_today': '2025-02-17', 'first_name': 'Ashwani', 'middle_name': 'J'}]\n"
+      "records: [{'date_today': '2025-02-17', 'first_name': 'harsh', 'middle_name': 'r'}, {'date_today': '2025-02-17', 'first_name': 'john', 'middle_name': ''}, {'date_today': '2025-02-17', 'first_name': 'Vladmir', 'middle_name': 'J'}, {'date_today': '2025-02-17', 'first_name': 'Ashwani', 'middle_name': 'J'}]\n"
      ]
     }
    ],
@@ -77,41 +87,208 @@
     "\n",
     "file_name = \"swipe_schedule.txt\"\n",
     "file = open(file_name, \"r\")\n",
-    "\n",
     "lines = file.readlines()  # Reads all lines into a list\n",
+    "file.close()\n",
+    "\n",
     "number_of_employees = int(len(lines)/14) \n",
     "\n",
     "records = []\n",
-    "record  = {}\n",
     "for i in range(0, number_of_employees): # i = 0, 1, 2, 3\n",
+    "    record  = {}\n",
     "    l = lines[i*14: i*14 + 14]  # <- lines[0:14], lines[14:28], lines[28:42], lines[42:56]\n",
     "    print(\"l=\", l)\n",
-    "    record['date_today']  = l[1].split(\":\")[1].strip()\n",
-    "    record['first_name']  = l[3].split(\":\")[1].strip()\n",
-    "    record['middle_name'] = l[4].split(\":\")[1].strip()\n",
+    "    \n",
+    "    record['date_today']  =  l[1].split(\":\")[1].strip() # or l[1][12:22]\n",
+    "    record['first_name']  =  l[3].split(\":\")[1].strip()\n",
+    "    record['middle_name'] =  l[4].split(\":\")[1].strip()\n",
     "     \n",
     "    records.append(record)\n",
     "    print(\"+++++++++++++++++++++++++++++++++++\\n\")\n",
     "    \n",
-    "print(\"\\n\\nrecords:\", records)\n",
-    "file.close()"
+    "print(\"\\n\\nrecords:\", records)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "97237716-31eb-4a81-b8da-7c69c5762488",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l= ['--------------- record 1---------------------------\\n', 'date today:2025-02-17\\n', '\\n', 'first name: harsh \\n', 'middle name: r\\n', 'last name: mehta\\n', 'employee id: c0092\\n', 'date of join:2020-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:42\\n', '\\n', '\\n', 'group: HR\\n', 'comments: The person is disabled\\n']\n",
+      "+++++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "l= ['--------------- record 2---------------------------\\n', 'date today:    2025-02-17\\n', '\\n', 'first name: john\\n', 'middle name: \\n', 'last name: smith\\n', 'employee id: c0093\\n', 'date of join:     2019-07-23\\n', '\\n', 'card swipes: 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', '\\n', '\\n', 'group: IT\\n', 'comments:\\n']\n",
+      "+++++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "l= ['--------------- record 3---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: Vladmir\\n', 'middle name: J\\n', 'last name: Kurshowski\\n', 'employee id: c0094\\n', 'date of join: 2017-07-23\\n', '\\n', 'card swipes: 7:32, 8:43\\n', '\\n', '\\n', 'group: IT\\n', 'comments: Employee is terminated\\n']\n",
+      "+++++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "l= ['--------------- record 4---------------------------\\n', 'date today: 2025-02-17\\n', '\\n', 'first name: Ashwani\\n', 'middle name: J\\n', 'last name: Swamy\\n', 'employee id: c0096\\n', 'date of join: 2023-07-29\\n', '\\n', 'card swipes: 7:32, 14:23\\n', '\\n', '\\n', 'group: IT\\n', 'comments: terminated']\n",
+      "+++++++++++++++++++++++++++++++++++\n",
+      "\n",
+      "\n",
+      "\n",
+      "records: [{'date_today': '025-02-17\\n', 'first_name': 'harsh', 'middle_name': 'r', 'last_name': 'mehta', 'employee_id': 'c0092', 'date_of_join': '2020-07-23', 'card_swipes': ': 7:32, 8:43, 8:50, 13:12, 14:15, 19:42\\n', 'group': 'HR', 'comments': 'The person is disabled\\n'}, {'date_today': '   2025-02', 'first_name': 'john', 'middle_name': '', 'last_name': 'smith', 'employee_id': 'c0093', 'date_of_join': '2019-07-23', 'card_swipes': ': 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', 'group': 'IT', 'comments': ''}, {'date_today': '2025-02-17', 'first_name': 'Vladmir', 'middle_name': 'J', 'last_name': 'Kurshowski', 'employee_id': 'c0094', 'date_of_join': '2017-07-23', 'card_swipes': ': 7:32, 8:43\\n', 'group': 'IT', 'comments': 'Employee is terminated\\n'}, {'date_today': '2025-02-17', 'first_name': 'Ashwani', 'middle_name': 'J', 'last_name': 'Swamy', 'employee_id': 'c0096', 'date_of_join': '2023-07-29', 'card_swipes': ': 7:32, 14:23\\n', 'group': 'IT', 'comments': 'terminated'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step3: Scale it up\n",
+    "\n",
+    "file_name = \"swipe_schedule.txt\"\n",
+    "file = open(file_name, \"r\")\n",
+    "lines = file.readlines()  # Reads all lines into a list\n",
+    "file.close()\n",
+    "\n",
+    "number_of_employees = int(len(lines)/14) \n",
+    "\n",
+    "records = []\n",
+    "for i in range(0, number_of_employees): # i = 0, 1, 2, 3\n",
+    "    record  = {}\n",
+    "    l = lines[i*14: i*14 + 14]  # <- lines[0:14], lines[14:28], lines[28:42], lines[42:56]\n",
+    "    print(\"l=\", l)\n",
+    "    \n",
+    "    record['date_today']  =  l[1].split(\":\")[1].strip() \n",
+    "    record['first_name']  =  l[3].split(\":\")[1].strip()\n",
+    "    record['middle_name'] =  l[4].split(\":\")[1].strip()\n",
+    "    record['last_name']   =  l[5].split(\":\")[1].strip()\n",
+    "    record['employee_id'] =  l[6].split(\":\")[1].strip()\n",
+    "    record['date_of_join']=  l[7].split(\":\")[1].strip()\n",
+    "    record['card_swipes'] =  l[9][11:]\n",
+    "    record['group']       =  l[12].split(\":\")[1].strip()\n",
+    "    record['comments']    =  l[13][10:]\n",
+    "    \n",
+    "     \n",
+    "    records.append(record)\n",
+    "    print(\"+++++++++++++++++++++++++++++++++++\\n\")\n",
+    "    \n",
+    "print(\"\\n\\nrecords:\", records)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ecb3c44a-8c4e-4486-8b08-12f5742d8bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'date_today': '   2025-02', 'first_name': 'john', 'middle_name': '', 'last_name': 'smith', 'employee_id': 'c0093', 'date_of_join': '2019-07-23', 'card_swipes': ': 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', 'group': 'IT', 'comments': ''}\n",
+      "{'date_today': '2025-02-17', 'first_name': 'Vladmir', 'middle_name': 'J', 'last_name': 'Kurshowski', 'employee_id': 'c0094', 'date_of_join': '2017-07-23', 'card_swipes': ': 7:32, 8:43\\n', 'group': 'IT', 'comments': 'Employee is terminated\\n'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step4: Now we find employees whose date_of_join < 2020\n",
+    "\n",
+    "for r in records:\n",
+    "    # print(\"date_of_join=\", r['date_of_join'])\n",
+    "    yr_of_join = r['date_of_join'].split(\"-\")[0]\n",
+    "    yr_of_join = int(yr_of_join)\n",
+    "    # print(yr_of_join)\n",
+    "\n",
+    "    if yr_of_join < 2020:\n",
+    "        print(r)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa279d59-338c-47a4-a259-0a04f0cdb65c",
+   "metadata": {},
+   "source": [
+    "# part A is done"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97237716-31eb-4a81-b8da-7c69c5762488",
+   "id": "60035603-0223-466b-a1f8-e9b38b1dbadf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecb3c44a-8c4e-4486-8b08-12f5742d8bcf",
+   "cell_type": "markdown",
+   "id": "9d1ede0d-b934-4a32-af1e-90211b837125",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Part B\n",
+    "- Create a function that print data of employees who started before year 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2c2c012e-52f5-4f13-8069-7528bcd22856",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'date_today': '2025-02-17', 'first_name': 'john', 'middle_name': '', 'last_name': 'smith', 'employee_id': 'c0093', 'date_of_join': '2019-07-23', 'card_swipes': ': 7:32, 8:43, 8:50, 13:12, 14:15, 19:40\\n', 'group': 'IT', 'comments': ''}\n",
+      "{'date_today': '2025-02-17', 'first_name': 'Vladmir', 'middle_name': 'J', 'last_name': 'Kurshowski', 'employee_id': 'c0094', 'date_of_join': '2017-07-23', 'card_swipes': ': 7:32, 8:43\\n', 'group': 'IT', 'comments': 'Employee is terminated\\n'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The hard is done. Now we just create a function and copy+paste the necessary code from above cells\n",
+    "\n",
+    "def print_employees_before_2020():\n",
+    "    file_name = \"swipe_schedule.txt\"\n",
+    "    file = open(file_name, \"r\")\n",
+    "    lines = file.readlines()  # Reads all lines into a list\n",
+    "    file.close()\n",
+    "    \n",
+    "    number_of_employees = int(len(lines)/14) \n",
+    "    \n",
+    "    records = []\n",
+    "    for i in range(0, number_of_employees): # i = 0, 1, 2, 3\n",
+    "        record  = {}\n",
+    "        l = lines[i*14: i*14 + 14]  # <- lines[0:14], lines[14:28], lines[28:42], lines[42:56]\n",
+    "        # print(\"l=\", l)\n",
+    "        \n",
+    "        record['date_today']  =  l[1].split(\":\")[1].strip() \n",
+    "        record['first_name']  =  l[3].split(\":\")[1].strip()\n",
+    "        record['middle_name'] =  l[4].split(\":\")[1].strip()\n",
+    "        record['last_name']   =  l[5].split(\":\")[1].strip()\n",
+    "        record['employee_id'] =  l[6].split(\":\")[1].strip()\n",
+    "        record['date_of_join']=  l[7].split(\":\")[1].strip()\n",
+    "        record['card_swipes'] =  l[9][11:]\n",
+    "        record['group']       =  l[12].split(\":\")[1].strip()\n",
+    "        record['comments']    =  l[13][10:]\n",
+    "        \n",
+    "         \n",
+    "        records.append(record)\n",
+    "        # print(\"+++++++++++++++++++++++++++++++++++\\n\")\n",
+    "\n",
+    "    # print(\"\\n\\nrecords:\", records)\n",
+    "\n",
+    "    for r in records:\n",
+    "        yr_of_join = r['date_of_join'].split(\"-\")[0]\n",
+    "        yr_of_join = int(yr_of_join)\n",
+    "        \n",
+    "        if yr_of_join < 2020:\n",
+    "            print(r)\n",
+    "\n",
+    "# Now we call the function\n",
+    "print_employees_before_2020()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed8435b-e758-4697-94c6-61d822af033c",
+   "metadata": {},
+   "source": [
+    "# Part B is done"
+   ]
   },
   {
    "cell_type": "code",
@@ -120,72 +297,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "074e1d84-691b-457f-9ee5-74e41261127c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'date_today': '2025-02-17', 'first_name': 'harsh', 'middle_name': 'r', 'last_name': 'mehta', 'employee_id': 'c0092', 'date_of_join': '2020-07-23', 'card_swipes': ['7:32', '8:43', '8:50', '13:12', '14:15', '19:42'], 'group': 'HR', 'comments': 'The person is disabled'}, {'date_today': '2025-02-17', 'first_name': 'john', 'middle_name': '', 'last_name': 'smith', 'employee_id': 'c0093', 'date_of_join': '2019-07-23', 'card_swipes': ['7:32', '8:43', '8:50', '13:12', '14:15', '19:40'], 'group': 'IT', 'comments': ''}, {'date_today': '2025-02-17', 'first_name': 'Vladmir', 'middle_name': 'J', 'last_name': 'Kurshowski', 'employee_id': 'c0094', 'date_of_join': '2017-07-23', 'card_swipes': ['7:32', '8:43'], 'group': 'IT', 'comments': 'Employee is terminated'}, {'date_today': '2025-02-17', 'first_name': 'Ashwani', 'middle_name': 'J', 'last_name': 'Swamy', 'employee_id': 'c0096', 'date_of_join': '2023-07-29', 'card_swipes': ['7:32', '14:23'], 'group': 'IT', 'comments': 'terminated'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# (OPTIONAL: ALternative to above) STEP3: lets create a dictionary to store all employees data. Then store the dict into a list\n",
-    "\n",
-    "file_name = \"swipe_schedule.txt\"\n",
-    "file = open(file_name, \"r\")\n",
-    "\n",
-    "lines = file.readlines()  # Reads all lines into a list\n",
-    "\n",
-    "records = []\n",
-    "record = {}\n",
-    "\n",
-    "for line in lines:\n",
-    "    line = line.strip()\n",
-    "    if not line:\n",
-    "        continue  # skip empty lines\n",
-    "\n",
-    "    # New record starts\n",
-    "    if line.startswith(\"--------------- record\"):\n",
-    "        if record:  # save previous record\n",
-    "            records.append(record)\n",
-    "            record = {}\n",
-    "        continue\n",
-    "\n",
-    "    if line.startswith(\"date today:\"):\n",
-    "        record[\"date_today\"] = line.split(\":\", 1)[1].strip()\n",
-    "    elif line.startswith(\"first name:\"):\n",
-    "        record[\"first_name\"] = line.split(\":\", 1)[1].strip()\n",
-    "    elif line.startswith(\"middle name:\"):\n",
-    "        record[\"middle_name\"] = line.split(\":\", 1)[1].strip()\n",
-    "    elif line.startswith(\"last name:\"):\n",
-    "        record[\"last_name\"] = line.split(\":\", 1)[1].strip()\n",
-    "    elif line.startswith(\"employee id:\"):\n",
-    "        record[\"employee_id\"] = line.split(\":\", 1)[1].strip()\n",
-    "    elif line.startswith(\"date of join:\"):\n",
-    "        record[\"date_of_join\"] = line.split(\":\", 1)[1].strip()\n",
-    "    elif line.startswith(\"card swipes:\"):\n",
-    "        swipes = line.split(\":\", 1)[1].strip()\n",
-    "        record[\"card_swipes\"] = [s.strip() for s in swipes.split(\",\") if s.strip()]\n",
-    "    elif line.startswith(\"group:\"):\n",
-    "        record[\"group\"] = line.split(\":\", 1)[1].strip()\n",
-    "    elif line.startswith(\"comments:\"):\n",
-    "        record[\"comments\"] = line.split(\":\", 1)[1].strip()\n",
-    "\n",
-    "# Add last record\n",
-    "if record:\n",
-    "    records.append(record)\n",
-    "\n",
-    "print(records)\n",
-    "\n",
-    "file.close()"
-   ]
   },
   {
    "cell_type": "code",
