--- a/tut_py_2_2_string_datatype.ipynb
+++ b/tut_py_2_2_string_datatype.ipynb
@@ -106,10 +106,6 @@
     "new_s = s + \" and is fun!\"\n",
     "print(new_s)  \n",
     "\n",
-    "\n",
-    "# String repetition\n",
-    "print(s * 3)  # repeat str s 3 times...concatenate s 3 times\n",
-    "\n",
     "######################\n",
     "# Checking substring\n",
     "s = \"Python is easy to learn\"\n",
@@ -150,6 +146,7 @@
    "source": [
     "# Lets explore some String methods\n",
     "s = \"  python is CoOL language \" \n",
+    "\n",
     "# print(len(s))\n",
     "# print(s.lower())  \n",
     "# print(s.upper())  \n",
@@ -161,7 +158,6 @@
     "# print(s.lstrip()) # Removes empty spaces from left\n",
     "# print(s.rstrip()) # Removes empty spaces from right\n",
     "# print(s.strip()) #Removes all empty spaces from left and right\n",
-    "# print(s.lower())  \n",
     "\n",
     "s = \"python is CoOL language. hope you have fun.\"\n",
     "print(s.capitalize())\n",
@@ -222,8 +218,8 @@
     "# You cannot add numeric types to string\n",
     "a = \"7\" # str\n",
     "b = 5   # int\n",
-    "res = a + b # ERROR\n",
-    "print(res)"
+    "# res = a + b # ERROR\n",
+    "# print(res)"
    ]
   },
   {
@@ -243,7 +239,7 @@
    "source": [
     "# what about multiply ???\n",
     "# You can multiply numeric types to string: it gives string repetition\n",
-    "a = \"7\"\n",
+    "a = \"773\"\n",
     "b = 5\n",
     "res = a * b\n",
     "print(res)"
@@ -270,8 +266,8 @@
    "source": [
     "# string  is immutable, but list is mutable\n",
     "s = 'Republic'\n",
-    "s[0] = 'Z'\n",
-    "print(s) # We get a error"
+    "# s[0] = 'Z' # We get a error\n",
+    "print(s) "
    ]
   },
   {
