--- a/tut_py_3_function_1_inbuilt-1_dir_help_sum_max_min_sorted_input_int_float_len.ipynb
+++ b/tut_py_3_function_1_inbuilt-1_dir_help_sum_max_min_sorted_input_int_float_len.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "# FUNCTION: inbuilt and user-defined\n",
     "\n",
-    "**why do we need function?** make your code cleaner, reusable, and easier to manage\n",
+    "**why do we need function?** \n",
+    "- Make your code cleaner, reusable, and easier to manage\n",
     "\n",
     "## in built function:\n",
     "Examples of in built fn: \n",
@@ -63,21 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on built-in function sum in module builtins:\n",
+      "Help on built-in function print in module builtins:\n",
       "\n",
-      "sum(iterable, /, start=0)\n",
-      "    Return the sum of a 'start' value (default: 0) plus an iterable of numbers\n",
+      "print(...)\n",
+      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
       "    \n",
-      "    When the iterable is empty, return the start value.\n",
-      "    This function is intended specifically for use with numeric values and may\n",
-      "    reject non-numeric types.\n",
+      "    Prints the values to a stream, or to sys.stdout by default.\n",
+      "    Optional keyword arguments:\n",
+      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+      "    sep:   string inserted between values, default a space.\n",
+      "    end:   string appended after the last value, default a newline.\n",
+      "    flush: whether to forcibly flush the stream.\n",
       "\n",
       "None\n"
      ]
@@ -88,7 +92,8 @@
     "# It’s like Python’s built-in mini-manual system\n",
     "\n",
     "# help on functions\n",
-    "print(help('sum')) \n",
+    "# print(help('sum')) \n",
+    "print(help('print'))\n",
     "# print(help('min'))\n",
     "# print(help('max'))\n",
     "# print(help('sorted'))\n",
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -141,16 +146,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### len\n",
-    "length of list, string, tuple, set, dictionary,etc"
+    "### len()\n",
+    "This gives the length of list, string, tuple, set, dictionary,etc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +171,8 @@
      "text": [
       "4\n",
       "5\n",
-      "3\n"
+      "3\n",
+      "2\n"
      ]
     }
    ],
@@ -167,14 +180,17 @@
     "# Need for len function:\n",
     "# I want to count the num of elements in containers for data\n",
     "\n",
-    "fruits = [ \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\" ] # list\n",
-    "print(len(fruits))\n",
+    "fruits_list = [ \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\" ] # list\n",
+    "print(len(fruits_list))\n",
     "\n",
-    "fruits = ( \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\", \"jackfruit\" ) # tuple\n",
-    "print(len(fruits))\n",
+    "fruits_tuple = ( \"Guava\", \"Kiwi\", \"Mango\", \"Kiwi\", \"jackfruit\" ) # tuple\n",
+    "print(len(fruits_tuple))\n",
     "\n",
-    "fruits = { \"Guava\", \"Kiwi\", \"Mango\" } # set\n",
-    "print(len(fruits))"
+    "fruits_set = { \"Guava\", \"Kiwi\", \"Mango\" } # set\n",
+    "print(len(fruits_set))\n",
+    "\n",
+    "fruits_dict = { \"Guava\": 2, \"Kiwi\": 4} # dictionary. Fruits:quantity\n",
+    "print(len(fruits_dict))"
    ]
   },
   {
@@ -223,19 +239,43 @@
    ],
    "source": [
     "# The need for input function: we want interactive program\n",
-    "\n",
     "# STEP1: User does not supply input\n",
+    "\n",
     "a = 5\n",
     "b = 7\n",
     "ans = a + b\n",
     "\n",
-    "print(f\"The sum is {ans}\")\n",
-    "\n",
-    "#################\n",
+    "print(f\"The sum is {ans}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your first number: 3\n",
+      "Enter your second number: 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered 3 and 7\n",
+      "The type of a is <class 'str'>. The type of b is <class 'str'>\n",
+      "Your sum is 37\n"
+     ]
+    }
+   ],
+   "source": [
     "# STEP2: We want user to input data. Now user supplies input ( but output is not what was desired )\n",
     "\n",
-    "a = input(\"enter your first number:\") # here a is str\n",
-    "b = input(\"enter your second number:\") # here b is str\n",
+    "a = input(\"Enter your first number:\") # here a is str\n",
+    "b = input(\"Enter your second number:\") # here b is str\n",
     "\n",
     "# Lets print what the user entered\n",
     "print(f\"You entered {a} and {b}\")\n",
@@ -248,64 +288,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter your first number: 4\n",
-      "enter your second number: 7\n"
+      "Enter your first number: 3\n",
+      "Enter your second number: 7\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your sum is 11\n"
+      "The type of a is <class 'int'>. The type of b is <class 'int'>\n",
+      "Your sum is 10\n"
      ]
     }
    ],
    "source": [
     "# STEP3: The need for int function.\n",
     "# convert a, b into data-type int using type casting\n",
-    "a = input(\"enter your first number:\") # here a is str\n",
-    "b = input(\"enter your second number:\") # here b is str\n",
+    "a = input(\"Enter your first number:\") # here a is str\n",
+    "b = input(\"Enter your second number:\") # here b is str\n",
     "\n",
     "a = int(a) # type cast\n",
     "b = int(b) # type cast\n",
+    "print(f\"The type of a is {type(a)}. The type of b is {type(b)}\")\n",
     "\n",
-    "ans = a + b\n",
+    "ans = a + b # now it adds int\n",
     "\n",
     "print(f\"Your sum is {ans}\") # ANSWER IS RIGHT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter your first number : 5\n",
-      "enter your second number: 7\n"
+      "Enter your first number : 3\n",
+      "Enter your second number: 7\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your sum is 12\n"
+      "Your sum is 10\n"
      ]
     }
    ],
    "source": [
     "# STEP4: convert a, b into data-type int directly: Let's combine/wrap int on input: \n",
-    "a = int(input(\"enter your first number :\")) # here a is int\n",
-    "b = int(input(\"enter your second number:\")) # here b is int\n",
+    "a = int(input(\"Enter your first number :\")) # here a is int\n",
+    "b = int(input(\"Enter your second number:\")) # here b is int\n",
+    "print(f\"The type of a is {type(a)}. The type of b is {type(b)}\")\n",
     "\n",
     "ans = a + b\n",
     "\n",
@@ -314,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "11\n"
      ]
     }
    ],
