--- a/tut_py_3_function_2_inbuilt-2_enumerate_isinstance_open.ipynb
+++ b/tut_py_3_function_2_inbuilt-2_enumerate_isinstance_open.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,15 +36,7 @@
      "text": [
       "Item is cherry\n",
       "Item is kiwi\n",
-      "Item is banana\n",
-      "#######################\n",
-      "Item 1 is cherry\n",
-      "Item 2 is kiwi\n",
-      "Item 3 is banana\n",
-      "#######################\n",
-      "Item 1 is cherry\n",
-      "Item 2 is kiwi\n",
-      "Item 3 is banana\n"
+      "Item is banana\n"
      ]
     }
    ],
@@ -56,18 +48,54 @@
     "\n",
     "#STEP1: without enumerate:\n",
     "for e in sequence:\n",
-    "    print(f\"Item is {e}\")\n",
-    "print(\"#######################\")\n",
-    "\n",
+    "    print(f\"Item is {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item 1 is cherry\n",
+      "Item 2 is kiwi\n",
+      "Item 3 is banana\n"
+     ]
+    }
+   ],
+   "source": [
     "# STEP2: I want to put numbers in  front of data that is being printed, i.e. I want to enumerate\n",
     "# So I use counter i.\n",
+    "sequence = ['cherry', 'kiwi', 'banana']\n",
+    "\n",
     "i = 1\n",
     "for e in sequence:\n",
     "    print(f\"Item {i} is {e}\")\n",
-    "    i += 1\n",
-    "\n",
-    "print(\"#######################\")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item 1 is cherry\n",
+      "Item 2 is kiwi\n",
+      "Item 3 is banana\n"
+     ]
+    }
+   ],
+   "source": [
     "# STEP3: Lets use enumerate function without counter\n",
+    "sequence = ['cherry', 'kiwi', 'banana']\n",
+    "\n",
     "for i,e in enumerate(sequence, start=1):\n",
     "    print(f\"Item {i} is {e}\")"
    ]
@@ -256,32 +284,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Need for open() function: We have to read/write to  files\n",
     "\n",
     "# STEP1: write multiple strings\n",
+    "# file = open(r\"C:\\Users\\hi\\Desktop\\example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
     "file = open(\"example.txt\", \"w\")  # Opens in write mode (overwrites file)\n",
     "\n",
     "msg = \"\"\"1 Hello, World!\n",
     "How many characters are in shamlodhiya\n",
     "Answer is 11.\n",
     "\"\"\"\n",
+    "\n",
     "file.write(msg) \n",
     "file.close()\n",
     "\n",
-    "# view the file in  notepad\n",
-    "\n",
-    "##################\n",
+    "# view the file in  notepad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Hello, World!\n",
+      "How many characters are in shamlodhiya\n",
+      "Answer is 11.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# STEP2: Read the content\n",
     "file = open(\"example.txt\", \"r\")  # Opens in read mode\n",
     "\n",
     "content = file.read()\n",
     "file.close()\n",
     "\n",
-    "print(content)\n"
+    "print(content)"
    ]
   },
   {
@@ -402,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
