--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "9239b98b-05df-4bc2-bf43-a99600872c9b",
    "metadata": {},
    "outputs": [
@@ -58,16 +58,14 @@
      "output_type": "stream",
      "text": [
       "2 Hello world. Today its raining.\n",
-      "3 Hello world. Today its raining.\n",
-      "4 Hello world. Today its raining. It is going to be humid today. Good luck\n"
+      "3 Hello world. Today its raining. It is going to be humid today. Good luck\n"
      ]
     }
    ],
    "source": [
     "# using comma , to print series of stmts \n",
-    "print(\"2 Hello world. Today its raining.\")\n",
-    "print(\"3 Hello world.\", \"Today its raining.\")\n",
-    "print(\"4 Hello world.\", \"Today its raining.\", \"It is going to be humid today.\", \"Good luck\")"
+    "print(\"2 Hello world.\", \"Today its raining.\")\n",
+    "print(\"3 Hello world.\", \"Today its raining.\", \"It is going to be humid today.\", \"Good luck\")"
    ]
   },
   {
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "accf14af-ee29-4325-8870-ed5a846fc0c3",
    "metadata": {
     "colab": {
@@ -167,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello. My name is Alice . My brothers name is Rahim . My age is 10 . My weight is 4.3\n"
+      "Hello. My name is Alice . My brothers name is Rahim . My age is 10 . My weight is 4.345\n"
      ]
     }
    ],
@@ -175,29 +173,26 @@
     "# Lets say you are getting data from some other source in form of variables. Lets print it.\n",
     "\n",
     "# style 1) Printing Multiple Values\n",
-    "person  = \"Alice\"    # person is a str variable with value Alice, \n",
-    "brother = \"Rahim\"    # brother is a str variable with value Rahim\n",
-    "age     = 10         # age is a int variable with value 10\n",
-    "wt      = 4.3        # wt is a float variable with value 4.3\n",
-    "\n",
+    "person  = \"Happy\"    # person is a str variable with value Happy, \n",
+    "wife    = \"Miley\"    # wife is a str variable with value Miley\n",
+    "age     = 40         # age is a int variable with value 40\n",
+    "wt      = 42.34      # wt is a float variable with value 4.34\n",
     "\n",
     "# print(person)\n",
-    "# print(brother)\n",
     "# print(\"person\")\n",
     "# print(father) # ERROR: This need to be defined first\n",
     "\n",
-    "# print(person, brother)\n",
-    "# print(person, brother, age, wt)\n",
-    "# print(\"person\", brother, \"age\", wt)\n",
+    "# print(person, wife, age, wt)\n",
+    "# print(\"person\", wife, \"age\", wt)\n",
     "# print(\"Hello. My name is\", person)\n",
     "\n",
     "# Lets print a meaningful statement\n",
-    "print(\"Hello. My name is\", person, \". My brothers name is\", brother, \". My age is\", age, \". My weight is\", wt)"
+    "print(\"Hello. My name is\", person, \". My brothers name is\", wife, \". My age is\", age, \". My weight is\", wt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "f3adadc0-dc7c-4a7c-a9f4-98ab02e5ba90",
    "metadata": {
     "colab": {
@@ -211,19 +206,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello. My name is Alice. My brother name is Rahim. My age is 10. My weight is 4.3\n"
+      "Hello. My name is Alice. My brother name is Rahim. My age is 10. My weight is 4.345\n"
      ]
     }
    ],
    "source": [
     "# style 2) Printing Multiple Values: formatting string (f-string)\n",
-    "person  = \"Alice\"    # name is a str variable with value Alice, \n",
-    "brother = \"Rahim\"    # brother is a str variable with value Rahim\n",
-    "age     = 10         # age is a int variable with value 10\n",
-    "wt      = 4.3        # wt is a float variable with value 4.3\n",
+    "person  = \"Happy\"    # person is a str variable with value Happy, \n",
+    "wife    = \"Miley\"    # wife is a str variable with value Miley\n",
+    "age     = 40         # age is a int variable with value 40\n",
+    "wt      = 42.34      # wt is a float variable with value 4.34\n",
     "\n",
-    "print(f\"Hello. My name is {person}. My brother name is {brother}. My age is {age}. My weight is {wt}\") # var should be in {} braces\n",
-    "# print(\"Hello. My name is {person}. My brother name is {brother}. My age is {age}. My weight is {wt}\") # without f"
+    "print(f\"Hello. My name is {person}. My wife name is {wife}. My age is {age}. My weight is {wt}\") # var should be in {} braces\n",
+    "# print(\"Hello. My name is {person}. My wife name is {wife}. My age is {age}. My weight is {wt}\") # without f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11914289",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello. My name is Happy. \n",
+      "My wife name is Miley. \n",
+      "My age is 40. My weight is 42.34\n",
+      "Hello. My name is Happy. \tMy wife name is Miley. \tMy age is 40. My weight is 42.34\n",
+      "Hello. My name is Happy. My wife name is \"Miley\". My age is 40. My \"weight is\" 42.34\n"
+     ]
+    }
+   ],
+   "source": [
+    "# newline, tab, double-quote\n",
+    "person  = \"Happy\"    \n",
+    "wife    = \"Miley\"    \n",
+    "age     = 40         \n",
+    "wt      = 42.34      \n",
+    "\n",
+    "print(f\"Hello. My name is {person}. \\nMy wife name is {wife}. \\nMy age is {age}. My weight is {wt}\") # newline\n",
+    "print(f\"Hello. My name is {person}. \\tMy wife name is {wife}. \\tMy age is {age}. My weight is {wt}\") # tab\n",
+    "print(f\"Hello. My name is {person}. My wife name is \\\"{wife}\\\". My age is {age}. My \\\"weight is\\\" {wt}\") # quote inside quote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ae0b577",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# printing \\ inside a \"\": C:\\Users\\file.txt\n",
+    "\n",
+    "# print(\"The path of file is C:\\Users\\file.txt\") # Throws error\n",
+    "# print(\"\"\"The path of file is C:\\Users\\file.txt\"\"\") # Throws error\n",
+    "print(\"The path of file is C:\\\\Users\\\\file.txt\") # C:\\Users\\file.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "31857e9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today is sunny ☀. I want to talk with my ❤ daughter. That would make me 🫠\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FUN with unicode chars\n",
+    "print(\"Today is sunny \\u2600. I want to talk with my \\u2764 daughter. That would make me \\U0001FAE0\")"
    ]
   },
   {
@@ -246,6 +304,44 @@
     "print(\"The sum of 2 numbers is\", 2 + 4)\n",
     "print(f\"The sum of 2 numbers is {2 + 4}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e90bea7d",
+   "metadata": {},
+   "source": [
+    "# STOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beee41ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f59dfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b24118a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8778e538",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -403,83 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "23727288-56aa-4d90-91a6-b0b8108f4335",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Today is sunny ☀. I want to talk with my ❤ daughter. That would make me 🫠\n"
-     ]
-    }
-   ],
-   "source": [
-    "# FUN with unicode chars\n",
-    "print(\"Today is sunny \\u2600. I want to talk with my \\u2764 daughter. That would make me \\U0001FAE0\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edcd1f84-743f-494f-90e0-53a05bc8e792",
-   "metadata": {},
-   "source": [
-    "# STOP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05a5ba4c-d338-4cb0-9370-b35610b97848",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8dbae4d6-9cdd-410c-8f6a-2076768ea920",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8194e8d2-6a46-4033-a24a-a346d0eb3d9d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "c98b7164-7ba9-4c13-9ceb-61e33f294779",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15c378a5-3191-427a-ae1d-03d8bad4e212",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9473931c-8162-4485-a94e-5bff3a4888c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8803d5a4-b8eb-4d52-b024-7161a08c91a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -836,7 +857,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -850,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
