--- a/tut_py_2_type_part2_conditional_ifelse.ipynb
+++ b/tut_py_2_type_part2_conditional_ifelse.ipynb
@@ -23,8 +23,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "96f954bc-30dc-4d9c-9fc6-04a868fcd4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "5221b0b0-aea6-4cfc-9e5e-05f6f11cedc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moving on to the next evaluation...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: Checking a student's score using only if\n",
+    "score = 3  # change to 3 or 7\n",
+    "\n",
+    "if score > 5:\n",
+    "    print(\"The student's score is above average.\")\n",
+    "    print(\"That's a good result!\")\n",
+    "    print(\"Lets celebrate\")\n",
+    "\n",
+    "print(\"Moving on to the next evaluation...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9cff667a-8710-48b3-9cd4-2fd3abbcea05",
    "metadata": {},
    "outputs": [
     {
@@ -39,36 +73,8 @@
     }
    ],
    "source": [
-    "# Example: Checking a student's score using only if\n",
-    "score = 6  # change\n",
-    "\n",
-    "if score > 5:\n",
-    "    print(\"The student's score is above average.\")\n",
-    "    print(\"That's a good result!\")\n",
-    "    print(\"Lets celebrate\")\n",
-    "\n",
-    "print(\"Moving on to the next evaluation...\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9cff667a-8710-48b3-9cd4-2fd3abbcea05",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The student's score is below average.\n",
-      "There might be room for improvement.\n",
-      "Moving on to the next evaluation...\n"
-     ]
-    }
-   ],
-   "source": [
     "# Example: Checking a student's score using if - else\n",
-    "score = 4  # previously 10\n",
+    "score = 40  # change to 4 or 40\n",
     "\n",
     "if score > 5:\n",
     "    print(\"The student's score is above average.\")\n",
@@ -83,7 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "9762c0bd-1e9d-4d5d-ac32-5dbb2fcdeb82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e33fbaf4-2e4a-41eb-b1d7-0cf9f0585352",
    "metadata": {},
    "outputs": [
@@ -91,7 +105,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter number: 2\n"
+      "Enter number: 6\n"
      ]
     },
     {
@@ -103,10 +117,10 @@
     }
    ],
    "source": [
-    "# Example: User enters a number and program display message if number is even or odd\n",
+    "# Aplication: User enters a number and program display message if number is even or odd\n",
     "\n",
-    "num = input(\"Enter number:\") # str\n",
-    "num = int(num) # type cast into int\n",
+    "num = input(\"Enter number:\") # it is str\n",
+    "num = int(num) # type cast str into int\n",
     "\n",
     "#OR USE\n",
     "# num = int(input(\"Enter number:\"))\n",
@@ -114,12 +128,20 @@
     "if num % 2 == 0:\n",
     "    print(\"Even number\")\n",
     "else:\n",
-    "    print(\"Odd number\")\n"
+    "    print(\"Odd number\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "e220bd31-4470-4878-bb03-46fc008f22ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "70dae8a0-9f62-4cbc-a699-254b73cc844a",
    "metadata": {},
    "outputs": [
@@ -127,15 +149,15 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your name:  ash\n",
-      "Enter your age:  34\n"
+      "Enter your name:  harry\n",
+      "Enter your age:  23\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello ash! You are younger than 100 year old man.\n"
+      "Hello harry! You are younger than 100 year old man.\n"
      ]
     }
    ],
@@ -146,17 +168,19 @@
     "age  = input(\"Enter your age: \")\n",
     "age  = int(age)\n",
     "\n",
-    "if age < 100:\n",
+    "if   age < 100:\n",
     "    print(f\"Hello {name}! You are younger than 100 year old man.\")\n",
+    "    \n",
     "elif age == 100:\n",
-    "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
+    "    print(f\"Wow {name}, you're exactly 100 years old this year!\")\n",
+    "    \n",
     "else:\n",
     "    print(f\"Hey {name}, you are older than 100 years old man.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "e1564d31-7736-486e-a83a-41feefcbc336",
    "metadata": {},
    "outputs": [
@@ -165,14 +189,14 @@
      "output_type": "stream",
      "text": [
       "Enter your name:  ash\n",
-      "Enter your age:  33\n"
+      "Enter your age:  100\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello ash! You will turn 100 years old in the year 2092.\n"
+      "Wow ash, you're already 100 years old this year!\n"
      ]
     }
    ],
@@ -189,15 +213,17 @@
     "if age < 100:\n",
     "    year_when_100 = current_year + (100 - age)\n",
     "    print(f\"Hello {name}! You will turn 100 years old in the year {year_when_100}.\")\n",
+    "    \n",
     "elif age == 100:\n",
     "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
+    "    \n",
     "else:\n",
-    "    print(f\"Hey {name}, you turned 100 years old {age - 100} years ago.\")\n"
+    "    print(f\"Hey {name}, you turned 100 years old {age - 100} years ago.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "98492e67-7dd9-4a18-b929-a68f2d6f13f0",
    "metadata": {},
    "outputs": [
@@ -205,19 +231,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grade: F\n",
-      "Buddy wake up. Start studying.\n"
+      "Grade: A\n",
+      "Congratulations. Your parents would be proud\n"
      ]
     }
    ],
    "source": [
-    "# Students are given grades based on their marks\n",
+    "# Application of il-elif-else: Students are given grades based on their marks\n",
     "# [100-90]: A\n",
     "# [80-90] : B\n",
     "# [70-80] : C\n",
     "# [<70]   : F\n",
     "\n",
-    "marks = 55\n",
+    "marks = 95 # change this to 55, 65, 75, 85, 95\n",
     "\n",
     "if marks >= 90:\n",
     "    print(\"Grade: A\")\n",
@@ -233,8 +259,16 @@
     "    \n",
     "else:\n",
     "    print(\"Grade: F\")\n",
-    "    print(\"Buddy wake up. Start studying.\")\n"
+    "    print(\"Buddy wake up. Start studying.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff5bf4b-786f-4a5f-90cd-3b897b0aa968",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -246,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "4311c784-1845-4d6e-bd42-90160de4a6e5",
    "metadata": {},
    "outputs": [
@@ -254,53 +288,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are eligible for an adult ticket.\n",
-      "######################\n"
+      "You are eligible for an adult ticket.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# if with 'or' - e.g.1: Check if the age is less than 13 or greater than 65\n",
+    "age = 15 # change to 11, 15, 70\n",
+    "\n",
+    "if age < 13 or age > 65:  \n",
+    "    print(\"You are eligible for a child or senior ticket.\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"You are eligible for an adult ticket.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e80d1888-ddf3-401b-8425-2ec4a9b422ef",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Do you want to continue? (yes/no):  yes\n"
+      "Do you want to continue? (yes/no):  YES\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thank you for your response.\n",
-      "######################\n",
-      "Weather normal\n"
+      "Thank you for your response.\n"
      ]
     }
    ],
    "source": [
-    "# if with 'or'\n",
-    "\n",
-    "#e.g.1: Check if the age is less than 13 or greater than 65\n",
-    "age = 16\n",
-    "\n",
-    "if age < 13 or age > 65:  \n",
-    "    print(\"You are eligible for a child or senior ticket.\")\n",
-    "else:\n",
-    "    print(\"You are eligible for an adult ticket.\")\n",
-    "print(\"######################\")\n",
-    "\n",
     "#e.g.2: Ask user whether he wants to continue and check that he enter only yes and no.\n",
+    "\n",
     "user_input = input(\"Do you want to continue? (yes/no): \").strip().lower()\n",
     "# print(user_input)\n",
     "\n",
     "if user_input == \"yes\" or user_input == \"no\":  # Check if the input is valid\n",
     "    print(\"Thank you for your response.\")\n",
+    "    \n",
     "else:\n",
-    "    print(\"Invalid input. Please enter 'yes' or 'no'.\")\n",
-    "print(\"######################\")"
+    "    print(\"Invalid input. Please enter 'yes' or 'no'.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "4abc7959-cb68-42de-858b-7378397fff82",
    "metadata": {},
    "outputs": [
@@ -313,15 +352,23 @@
     }
    ],
    "source": [
-    "# SKIP\n",
-    "#e.g.3: design a logic that print weather alert when temp < 32 or > 90\n",
+    "# SKIP - e.g.3: design a logic that print weather alert when temp < 32 or > 90\n",
     "temp = 50\n",
     "\n",
     "if temp < 32 or temp > 90: \n",
     "    print(\"Weather alert\")\n",
+    "    \n",
     "else:\n",
-    "    print(\"Weather normal\")\n"
+    "    print(\"Weather normal\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "185b3191-090e-4e0c-8354-725c6833f2e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -333,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "2eb4dd39-d4c6-4b1e-88a9-b660490d6641",
    "metadata": {},
    "outputs": [
@@ -341,45 +388,55 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Username: ash\n",
-      "Enter password: gdfd\n"
+      "Username: admin\n",
+      "Enter password: 33333\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid login\n",
-      "##################\n",
-      "You are eligible for a 20% discount!\n",
-      "Congratulations! You have passed the course.\n"
+      "Invalid login\n"
      ]
     }
    ],
    "source": [
-    "# if with 'and'\n",
+    "# if with 'and' #e.g.1#  Checking User Login Credentials\n",
     "\n",
-    "#e.g.1\n",
-    "#  Checking User Login Credentials\n",
-    "# if with 'and'\n",
     "username = input(\"Username:\")\n",
     "password = input(\"Enter password:\")\n",
     "\n",
     "if username == \"admin\" and password == \"12345\":\n",
     "    print(\"Successful login\")\n",
+    "    \n",
     "else:\n",
-    "    print(\"Invalid login\")\n",
-    "\n",
-    "print(\"##################\")\n",
-    "\n",
-    "#e.g.2: Give 20% discount if member is gold and purchase amount > 100\n",
+    "    print(\"Invalid login\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3975a6e6-d2b8-4dbc-894d-e8f1fd2f066c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are not eligible for a discount.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Application: e.g.2: Give 20% discount if member is gold and purchase amount > 100\n",
     "membership_status = \"gold\"\n",
-    "purchase_amount = 150 \n",
+    "purchase_amount   = 90 # change this to 90 and 900\n",
     "\n",
     "if membership_status == \"gold\" and purchase_amount > 100:  # Check if both conditions are met\n",
     "    print(\"You are eligible for a 20% discount!\")\n",
+    "    \n",
     "else:\n",
-    "    print(\"You are not eligible for a discount.\")\n"
+    "    print(\"You are not eligible for a discount.\")"
    ]
   },
   {
@@ -397,8 +454,7 @@
     }
    ],
    "source": [
-    "# SKIP\n",
-    "#e.g.3: design logic for -> student passes if score > 70 and attendance > 75%\n",
+    "# APPLICATIONS: SKIP e.g.3: design logic for -> student passes if score > 70 and attendance > 75%\n",
     "exam_score = 78\n",
     "attendance_percentage = 85  # Attendance in percentage\n",
     "\n",
@@ -407,6 +463,22 @@
     "else:\n",
     "    print(\"You need to improve your score or attendance to pass.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6df23054-7b3e-43a0-88a3-32a3354adfbe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32e545ae-4c93-4e66-9a1f-19193c4a9731",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -418,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "2951acf7-88cf-4ffd-be4c-df5e3af16256",
    "metadata": {},
    "outputs": [
@@ -426,44 +498,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U r not eligible for the scolarship\n",
-      "####################\n",
-      "Access granted to the restricted area.\n"
+      "U r not eligible for the scolarship\n"
      ]
     }
    ],
    "source": [
-    "# if with 'and' and 'or'\n",
+    "# if with 'and' and 'or' -\n",
+    "# e.g.1: if (score > 50 and num of extra-curricular activities > 2) or (score > 80), then give scholarship\n",
     "\n",
-    "#e.g.1: check if (score > 50 and num of extra-curricular activities > 2) or (score > 80)\n",
-    "score = 30 \n",
+    "score     = 30 \n",
     "extracurr = 2\n",
     "\n",
     "if (score > 50 and extracurr >= 2) or (score >= 80):\n",
     "    print(\"U r eligible for the scolarship\")\n",
+    "    \n",
     "else:\n",
-    "    print(\"U r not eligible for the scolarship\")\n",
+    "    print(\"U r not eligible for the scolarship\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "44011d5d-4372-4c32-a064-34dc70f7fd80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access denied.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Application: SKIP e.g.2 # Check if the user is (an admin or editor) and is active, then grant access\n",
     "\n",
-    "print(\"####################\")\n"
+    "user_role = \"editor\"\n",
+    "is_active = False  # change to True and False\n",
+    "\n",
+    "if (user_role == \"admin\" or user_role == \"editor\") and is_active:  \n",
+    "    print(\"Access granted to the restricted area.\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Access denied.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44011d5d-4372-4c32-a064-34dc70f7fd80",
+   "id": "461f05be-07a8-426f-93ce-1b86d87bb8e5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# SKIP\n",
-    "#e.g.2\n",
-    "user_role = \"editor\"\n",
-    "is_active = True\n",
-    "\n",
-    "if (user_role == \"admin\" or user_role == \"editor\") and is_active:  # Check if the user is an admin or editor and is active\n",
-    "    print(\"Access granted to the restricted area.\")\n",
-    "else:\n",
-    "    print(\"Access denied.\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -475,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "3f149afa-c1a2-4a11-ab69-5677e946bf97",
    "metadata": {},
    "outputs": [
@@ -483,20 +569,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "milk is on the list.\n"
+      "butter is not on the list.\n"
      ]
     }
    ],
    "source": [
     "# Check if item is in shopping list\n",
-    "shopping_list = [\"milk\", \"bread\", \"eggs\"]\n",
-    "item = \"milk\" # put butter\n",
+    "shopping_list = [\"milk\", \"bread\", \"eggs\", \"honey\"]\n",
+    "item = \"butter\" # change to milk butter\n",
     "\n",
     "if item in shopping_list:\n",
     "    print(f\"{item} is on the list.\")\n",
+    "    \n",
     "else:\n",
     "    print(f\"{item} is not on the list.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cc804f2-9f59-451e-8722-ae8fc5a65ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "607f2c0e-1cfc-4d02-957e-397aa738ad11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -508,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "1c643cc6-4b00-4a32-917c-e319625db19d",
    "metadata": {},
    "outputs": [
@@ -516,7 +619,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are too young to drive.\n"
+      "You are eligible to drive.\n"
      ]
     }
    ],
@@ -524,19 +627,20 @@
     "# Nested if Statement: Implement following logic:\n",
     "\n",
     "# If age > 18 and has license, then eligible to drive\n",
-    "# if age > 18 and no license, then cannot drive\n",
+    "# if age > 18 and no license, then you eligible to drive but need Driver license to be on road\n",
     "# if age < 18, then not eligible to drive\n",
     "\n",
-    "age = 12\n",
-    "has_license = False\n",
+    "age = 19 # change to 12, 19, \n",
+    "has_license = True\n",
     "\n",
     "if age >= 18:\n",
     "    if has_license:\n",
     "        print(\"You are eligible to drive.\")\n",
     "    else:\n",
     "        print(\"You are eligible to drive, but you need a driving license.\")\n",
+    "\n",
     "else:\n",
-    "    print(\"You are too young to drive.\")\n"
+    "    print(\"You are too young to drive. You are younger than 18\")"
    ]
   },
   {
