--- a/tut_py_2_type_part4_1_dict.ipynb
+++ b/tut_py_2_type_part4_1_dict.ipynb
@@ -54,20 +54,12 @@
     "}\n",
     "\n",
     "print(student_scores)\n",
-    "print(type(student_scores))\n",
-    "\n",
-    "####################\n",
-    "# Side note: I can rewrite above like this too:\n",
-    "student_scores = { \"Ram\": 85, \"Carlos\": 92, \"Roman\": 78 }\n",
-    "print(student_scores)\n",
-    "print(type(student_scores))\n",
-    "\n",
-    "# BUT it is less clear."
+    "print(type(student_scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2ea4fc56-44d2-4ae6-9b68-cec71728c280",
    "metadata": {},
    "outputs": [
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3d485ea5-36ef-4ecd-be6f-c639004c769e",
    "metadata": {},
    "outputs": [
@@ -103,6 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[('Ram', 85), ('Carlos', 92), ('Roman', 78)]\n",
       "{'Ram': 85, 'Carlos': 92, 'Roman': 78}\n"
      ]
     }
@@ -113,13 +106,93 @@
     "scores = [85,     92,       78]     # values\n",
     "\n",
     "student_scores = dict(zip(names, scores))\n",
+    "# print(list(zip(names, scores)))\n",
     "\n",
     "print(student_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "7f952789-52c8-482a-b458-25936b1c969c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "37919f3c-360b-446d-9cfb-be540faca87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5623: 85, 5612: 92, 5634: 78}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Side not: Keys can be string, int, float\n",
+    "employee = { # keys=employee_id, value=age\n",
+    "    5623: 85, \n",
+    "    5612: 92, \n",
+    "    5634: 78\n",
+    "}\n",
+    "\n",
+    "print(employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22e5410b-fb5c-4383-81a1-0134a7fa4629",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cf1a589-e412-4aec-b2e1-a492cb399694",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ae43a93-577a-4139-9fa3-22747ff1160d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__class_getitem__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__ior__', '__iter__', '__le__', '__len__', '__lt__', '__ne__', '__new__', '__or__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__ror__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'clear', 'copy', 'fromkeys', 'get', 'items', 'keys', 'pop', 'popitem', 'setdefault', 'update', 'values']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I want to see all the in-built methods of dict\n",
+    "print(dir(dict))\n",
+    "\n",
+    "# important ones are : 'clear', 'copy', 'fromkeys', 'get', 'items', \n",
+    "# 'keys', 'pop', 'popitem', 'setdefault', 'update', 'values'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8492f326-bc6a-4e83-94ed-5be903208c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "ba1da969-6a07-4dc9-9cd7-f241a70d1377",
    "metadata": {},
    "outputs": [
@@ -127,13 +200,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85\n",
-      "92\n"
+      "85\n"
      ]
     }
    ],
    "source": [
-    "# Accessing values using keys\n",
+    "# Accessing values using keys: []\n",
     "\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
@@ -142,15 +214,48 @@
     "}\n",
     "\n",
     "print(student_scores[\"Surendar\"])  # Output: 85\n",
-    "# print(student_scores[\"Tom\"])       # ERROR: KeyError \n",
+    "# print(student_scores[\"Tom\"])       # ERROR: KeyError "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a122aec7-0a49-4f98-a0fb-06d39b1c1139",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing values using keys: get() . This gracefully handles KeyError\n",
     "\n",
-    "print(student_scores.get(\"Bob\"))  # Output: 92\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
+    "}\n",
+    "\n",
+    "print(student_scores.get(\"Surendar\"))  # Output: 92\n",
     "print(student_scores.get(\"Tom\"))  # None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1973ef74-146d-485b-8eb2-c4dae44606d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "d153e57d-89be-48f9-8dd3-65f7942c8df8",
    "metadata": {},
    "outputs": [
@@ -158,13 +263,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Surendar', 'Bob', 'Tanner'])\n",
-      "dict_values([85, 92, 78])\n"
+      "keys  :  dict_keys(['Surendar', 'Bob', 'Tanner'])\n",
+      "values:  dict_values([85, 92, 78])\n"
      ]
     }
    ],
    "source": [
-    "# show me all keys\n",
+    "# show me all keys and values: keys(), values()\n",
+    "\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
     "   \"Bob\"     : 92,\n",
@@ -172,15 +278,35 @@
     "}\n",
     "\n",
     "keys = student_scores.keys()\n",
-    "print(keys)\n",
+    "print(\"keys  : \", keys)\n",
     "\n",
-    "#########################\n",
-    "# show me all values\n",
     "values= student_scores.values()\n",
-    "print(values)\n",
+    "print(\"values: \",values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "930d73b1-ffac-4206-968f-cca88692c8a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('Surendar', 85), ('Bob', 92), ('Tanner', 78)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# show me both key,values: items()\n",
     "\n",
-    "########################\n",
-    "# show me both key,values:\n",
+    "student_scores = {\n",
+    "   \"Surendar\": 85, \n",
+    "   \"Bob\"     : 92,\n",
+    "   \"Tanner\"  : 78\n",
+    "}\n",
+    "\n",
     "items = student_scores.items()\n",
     "print(items)"
    ]
@@ -188,6 +314,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ac8ef39-f327-4bbb-bb5b-11edb7198ce7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "b9ce7070-cb13-406e-835d-3bf98753d0e3",
    "metadata": {},
    "outputs": [
@@ -195,7 +329,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([('Surendar', 85), ('Bob', 92), ('Tanner', 78)])\n",
       "3\n"
      ]
     }
@@ -203,33 +336,6 @@
    "source": [
     "# show me how many elements there are in dict\n",
     "print(len(student_scores))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ef34a9ab-94f3-4f66-8b9a-a757ef15b5d8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{56: 85, 12: 92, 34: 78}\n",
-      "92\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Side not: Keys can be string, int, float\n",
-    "employee = { # keys=employee_id, value=age\n",
-    "    56: 85, \n",
-    "    12: 92, \n",
-    "    34: 78\n",
-    "}\n",
-    "\n",
-    "print(employee)\n",
-    "print(employee[12])"
    ]
   },
   {
